Added my changes

--- a/config/apotheosis/spawner.cfg
+++ b/config/apotheosis/spawner.cfg
@@ -14,7 +14,7 @@ general {
 
 ignore_spawn_cap {
     # The item that applies this modifier. [default: minecraft:chorus_fruit]
-    S:item=minecraft:barrier
+    S:item=minecraft:chorus_fruit
 }
 
 
@@ -74,7 +74,7 @@ player_activation_range {
     S:item=minecraft:prismarine_crystals
 
     # The max value of this stat. [range: -2147483648 ~ 2147483647, default: 50]
-    I:max_value=50
+    I:max_value=128
 
     # The min value of this stat. [range: -2147483648 ~ 2147483647, default: 0]
     I:min_value=0
