--- a/config/appliedenergistics2-common.toml
+++ b/config/appliedenergistics2-common.toml
@@ -52,7 +52,7 @@
 		#No comment
 		SpawnPressesInMeteorites = true
 		#No comment
-		MeteoriteWorldGen = true
+		MeteoriteWorldGen = false
 
 [general]
 	#Will auto-remove items that crash when being loaded from storage. This will destroy those items instead of crashing the game!
