--- a/config/industrialforegoing/machine-agriculture-husbandry.toml
+++ b/config/industrialforegoing/machine-agriculture-husbandry.toml
@@ -41,9 +41,9 @@
 		#Amount of Power Consumed per Operation - Default: [10FE] - This is Calculated as [VALUE * (amount + 1)]
 		powerPerOperation = 10
 		#Max Amount of Stored Fluid - Default: [8000mB]
-		maxSewageTankSize = 8000
+		maxSewageTankSize = 64000
 		#Max Amount of Stored Fluid - Default: [8000mB]
-		maxEssenceTankSize = 8000
+		maxEssenceTankSize = 2147483647
 
 	[MachineAgricultureHusbandryConfig.AnimalFeederConfig]
 		#Max Stored Power [FE] - Default: [10000 FE]
